# bioclip-vector-db

./: README.md  Random-embeddings.ipynb  app_gr.py  chromadb-demo.ipynb  pyproject.toml  requirements.txt
docs/: interface.md  query_example_1.json  query_example_2.json
src/app/server/: db.py  image.py
src/bioclip_vector_db/: dataset_loader.py  parse_utils.py  vector_db.py
src/bioclip_vector_db/client/: nearest_neighbor_client.py
src/bioclip_vector_db/query/: README.md  neighborhood_server.py  wsgi.py
src/bioclip_vector_db/storage/: faiss_utils.py  metadata_storage.py  storage_factory.py  storage_impl.py  storage_interface.py
tests/: bioclip_vector_db_tests.py  mock_storage_impl.py  parse_utils_test.py
